[gd_scene load_steps=19 format=3 uid="uid://tsygrhao5qe7"]

[ext_resource type="PackedScene" uid="uid://pgxlur2fj14b" path="res://scenes/npcs/npc.tscn" id="1_peqfk"]
[ext_resource type="Script" uid="uid://dpv764210rlt8" path="res://scripts/mushroom_npc.gd" id="2_b2pha"]
[ext_resource type="Texture2D" uid="uid://tuydsothg2ba" path="res://assets/enemies.png" id="3_tdg2m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_peqfk"]
atlas = ExtResource("3_tdg2m")
region = Rect2(128, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2pha"]
atlas = ExtResource("3_tdg2m")
region = Rect2(144, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8agr"]
atlas = ExtResource("3_tdg2m")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aafrn"]
atlas = ExtResource("3_tdg2m")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1rg1"]
atlas = ExtResource("3_tdg2m")
region = Rect2(80, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5dk7"]
atlas = ExtResource("3_tdg2m")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdg2m"]
atlas = ExtResource("3_tdg2m")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1frkv"]
atlas = ExtResource("3_tdg2m")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vjpl"]
atlas = ExtResource("3_tdg2m")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cggvo"]
atlas = ExtResource("3_tdg2m")
region = Rect2(80, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifl2r"]
atlas = ExtResource("3_tdg2m")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj7wp"]
atlas = ExtResource("3_tdg2m")
region = Rect2(48, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vfw42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_peqfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2pha")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8agr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aafrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1rg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5dk7")
}],
"loop": false,
"name": &"emerge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdg2m")
}],
"loop": true,
"name": &"emerged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1frkv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vjpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cggvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifl2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj7wp")
}],
"loop": false,
"name": &"submerge",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2pha"]
size = Vector2(39, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_peqfk"]
size = Vector2(13, 12)

[node name="MushroomNPC" instance=ExtResource("1_peqfk")]
script = ExtResource("2_b2pha")

[node name="AnimatedSprite" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_vfw42")
animation = &"emerge"

[node name="PlayerDetectionArea" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="PlayerDetectionCollisionShape" type="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
unique_name_in_owner = true
position = Vector2(33, 2)
shape = SubResource("RectangleShape2D_b2pha")

[node name="CollisionShape2D" parent="NPCHitbox" index="0"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_peqfk")

[node name="CooldownTimer" type="Timer" parent="." index="5"]
unique_name_in_owner = true
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]

[editable path="NPCHitbox"]
